# portfolio

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
backend/app/: main.py
documentation/diagrams/: blog_publication.mmd  class_diagram.mmd  database.mmd  dataflow.mmd  datastructure.md  datastructure.mmd  secret_passage.mmd  sequence_admin_connexion.mmd  use-case.mmd
frontend/: eslint.config.js  package-lock.json  package.json
frontend/A Neat Dev Portfolio/: index.html  package-lock.json  package.json
frontend/A Neat Dev Portfolio/src/: App.vue  main.js
frontend/A Neat Dev Portfolio/src/components/: SplashScreen.vue
frontend/A Neat Dev Portfolio/src/components/three/: BoundarySystem.js  Droid.js  EngineParticles.js  Planet.js  PlanetGenerator.js  RingSystem.js  SpaceScene.vue  Spaceship.js  StarField.js
frontend/A Neat Dev Portfolio/src/components/ui/: FixedHeader.vue  UIController.js
frontend/A Neat Dev Portfolio/src/config/: universe.config.js
frontend/A Neat Dev Portfolio/src/controllers/: CameraController.js  UniverseController.js
frontend/A Neat Dev Portfolio/src/plugins/: three.js  vuetify.js
frontend/A Neat Dev Portfolio/src/services/: LoadingService.js  NavigationService.js  PhysicsService.js
scripts/: eslint_badge_generator.py
